--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node your-script.js"
+
   },
   "keywords": [],
   "author": "",
@@ -16,4 +18,5 @@
   "devDependencies": {
     "cypress-email-results": "^1.8.0"
   }
+ 
 }
