--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: rofood-cypress-project
 
 on:
    schedule:
-     - cron: '*5 * * * *'
+     - cron: '*/5 * * * *'
   workflow_dispatch:
 
 jobs:
