--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 jobs:
    test:
       runs-on: macos-latest
-      steps
+      steps:
          - uses: actions/checkout@v3
          - uses: cypress-io/github-action@v4
            with:
