--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,11 @@
 name: Rofood-cypress
-
 on:
-
+  schedule:
+    - cron: '0 14 * * 1'
    push:
       branches: ["main"]
 
-   schedule: ## Schedule the job to run at 12.am daily.
-   - cron: "12 16 * 10 7"   
+  
   
 jobs:
    test:
