--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Rofood-cypress
 on:
   schedule:
-    - cron: '0 14 * * 1'
+    - cron: '12 16 * 10 7'
    push:
       branches: ["main"]
 
@@ -16,4 +16,4 @@ jobs:
            with:
               record: true
            env:
-              CYPRESS_RECORD_KEY: 4eb97121-e822-4fde-a955-02494b8c3cef
+              CYPRESS_RECORD_KEY: fc789b79-e818-43a1-ba48-7a632f550ff5
