--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
  
    schedule:
     # * is a special character in YAML so you have to quote this string
-     - cron:  '0 0 * * *'
+     - cron:  '0 10 * * ? *'
   
    push:
       branches: ["yt"]
