--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: Rofood-cypress
 on:
  
    schedule:
-   
-     - cron:  '0 10 * * ? *'
+    # * is a special character in YAML so you have to quote this string
+     - cron:  '0 0 * * *'
   
    push:
       branches: ["yt"]
