--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: Rofood-cypress
 on:
  
    schedule:
-    # * is a special character in YAML so you have to quote this string
-     - cron:  '0 1 * * *'
+    # * is a special character in YAML so you have to quote this string '0 1 * * *'
+     - cron:  "*/5 * * * *"
   
    push:
       branches: ["main"]
