--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
  
    schedule:
     # * is a special character in YAML so you have to quote this string '0 1 * * *'
-     - cron:  "*/5 * * * *"
+     - cron:  "0 1 * * *"
   
    push:
       branches: ["main"]
